--- a/src/app/components/destinations/explore-destinations/explore-destinations.component.html
+++ b/src/app/components/destinations/explore-destinations/explore-destinations.component.html
@@ -1,55 +1,4 @@
 <div class="container mt-5 mb-5">
-    <div class="slider-effectCoverflow">
-        <swiper
-            [effect]="'coverflow'"
-            [grabCursor]="true"
-            [centeredSlides]="true"
-            [slidesPerView]="'auto'"
-            [coverflowEffect]="{
-                rotate: 50,
-                stretch: 0,
-                depth: 100,
-                modifier: 1,
-                slideShadows: true
-            }"
-            [pagination]="true"
-            [navigation]="true"
-            class="mySwiper">
-            <ng-template swiperSlide>
-                <div class="card card-dim">
-                    <img src="../../../../assets/images/cities/shimla.jpg" alt="cityImage">
-                </div>
-            </ng-template>
-            <ng-template swiperSlide>
-                <div class="card card-dim">
-                    <img src="../../../../assets/images/cities/jaipur.jpg" alt="cityImage">
-                </div>
-            </ng-template>
-            <ng-template swiperSlide>
-                <div class="card card-dim">
-                    <img src="../../../../assets/images/cities/jaipur.jpg" alt="cityImage">
-                </div>
-            </ng-template>
-            <ng-template swiperSlide>
-                <div class="card card-dim">
-                    <img src="../../../../assets/images/cities/jaipur.jpg" alt="cityImage">
-                </div>
-            </ng-template>
-            <ng-template swiperSlide>
-                <div class="card card-dim">
-                    <img src="../../../../assets/images/cities/jaipur.jpg" alt="cityImage">
-                </div>
-            </ng-template>
-            <ng-template swiperSlide>
-                <div class="card card-dim">
-                    <img src="../../../../assets/images/cities/jaipur.jpg" alt="cityImage">
-                </div>
-            </ng-template>
-            <ng-template swiperSlide>
-                <div class="card card-dim">
-                    <img src="../../../../assets/images/cities/jaipur.jpg" alt="cityImage">
-                </div>
-            </ng-template>
-        </swiper>
-    </div>
+    <h4 class="title mb-0">Explore Destinations</h4>
+    <app-cards-slider [cardImages]="cardImages"></app-cards-slider>
 </div>
